...
    @SerializedName("key") val key: String = "",
    @SerializedName("title") val title: String = "",
    @SerializedName("type") val type: String = "",
    @SerializedName("agent") val agent: String? = null,
    @SerializedName("scanner") val scanner: String? = null,
    @SerializedName("id") val id: String? = null,
    @SerializedName("tag") val tag: String? = null,
    @SerializedName("tagKey") val tagKey: String? = null,
    @SerializedName("thumb") val thumb: String? = null,
)

data class Metadata(
    @SerializedName("ratingKey") val ratingKey: String = "",
...
